fix z-index nav-menu

--- a/assets/src/scss/layout.scss
+++ b/assets/src/scss/layout.scss
@@ -561,7 +561,7 @@ header {
   //NAV-MENU
   &-menu {
     position: relative;
-    z-index: 10;
+    z-index: 2;
 
     &-categories {
       display: flex;
